Fix 480px mediaquerie with flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ img {
   @media screen and (max-width:1140px) {
 
     .container{
-        width: 768px;
+        width: 100%;
     }
     
   }
@@ -145,6 +145,9 @@ img {
 
   @media screen and (max-width:480px) {
 
+    .row{
+        flex-wrap: wrap;
+    }
     
     .lessons .col, .steps .col, .why-us .col-left, .why-us .col-right
     {
